--- a/style.css
+++ b/style.css
@@ -21,3 +21,147 @@ body {
 */
 
 /* ----- zde zacni psat vlastni css ----- */
+
+body {
+    
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    background-color: #f5f5f5;
+}
+
+.zbozi {
+    width: 670px;
+    height: 440px;
+    margin: 100px auto auto;
+    border-radius: 12px;
+    box-shadow: 1px 3px 12px 1px #959595ad;
+}
+
+.vizual {
+    height: 440px;
+    float: left;
+    width: 50%;
+    background-image: linear-gradient(#06d7c1, #50cc49);
+    padding: 30px;
+    border-radius: 12px 0 0 12px;
+    position: relative;
+}
+
+.detaily {
+    height: 440px;
+    float: left;
+    width: 50%;
+    background-color: white;
+    padding: 30px;
+    border-radius: 0 12px 12px 0;
+    position: relative;
+}
+
+.bota {
+    position: absolute;
+    bottom: 0px;
+    left: -82px;
+}
+
+p, h1, h2 {
+    margin: 0;
+}
+
+.slogan {
+    font-size: 16px;
+    font-weight: 500;
+    font-weight: bold;
+    color: white;
+    line-height: 1.5;
+    margin-top: 30px;
+}
+
+.cenovka {
+    text-align: right;
+    position: absolute;
+    bottom: 30px;
+    right: 30px;
+}
+
+.cena {
+    font-size: 28px;
+    font-weight: 500;
+    font-weight: bold;
+    color: white;
+    margin-bottom: 5px;
+}
+
+.zaruka {
+    font-size: 12px;
+    font-weight: 400;
+    font-weight: bold;
+    color: white;
+}
+
+.nazev {
+    font-size: 20px;
+    font-weight: 500;
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}   
+
+.produkt {
+    color: #959595;
+}
+
+.popis {
+    margin: 30px 0 30px;
+}
+
+.parametr {
+    text-transform: uppercase;
+    font-size: 15px;
+    border-top: 2px solid #06d7c1;
+    padding-top: 30px;
+}
+
+.velikosti {
+    margin: 0;
+    padding: 0;
+}
+
+.velikosti li {
+    display: inline-block;
+    padding: 15px 10px;
+}
+
+.akce a {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    border: 1px solid #f15f42;
+    background-color: #f15f42;
+    border-radius: 6px;
+    padding: 12px 30px;
+    box-shadow: 1px 2px 5px 1px #9595957c;
+    font-size: 14px;
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+}
+
+.akce a:hover, .akce a:focus {
+    background-color: rgb(38, 78, 114);
+    border: 1px solid rgb(38, 78, 114);
+}
+
+.velikosti a {
+    text-decoration: none;
+    color: black;
+}
+
+.velikosti a:hover, .velikosti a:focus {
+    border: 1px solid #f15f42;
+    border-radius: 50px;
+    padding: 5px;
+    font-weight: bold;
+    color: #f15f42;
+    
+}
